Added proper bootstra modal and leaflet map.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
 	
 	<script type="text/javascript" src="jquery.js"></script>
 	<script type="text/javascript" src="jquery.serializejson.js"></script>
-  	
+	
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
   </head>
 
   <body>
